@@ -1,36 +1,0 @@
-Bucharest.pm
-Changes
-examples/ex1.pl
-examples/ex2.pl
-examples/ex3.pl
-examples/ex4.pl
-images/ex3.png
-inc/Module/Install.pm
-inc/Module/Install/AuthorTests.pm
-inc/Module/Install/Base.pm
-inc/Module/Install/Can.pm
-inc/Module/Install/Fetch.pm
-inc/Module/Install/Makefile.pm
-inc/Module/Install/Metadata.pm
-inc/Module/Install/ReadmeFromPod.pm
-inc/Module/Install/Share.pm
-inc/Module/Install/Win32.pm
-inc/Module/Install/WriteAll.pm
-LICENSE.artistic_2
-LICENSE.bsd
-Makefile.PL
-MANIFEST			This list of files
-META.yml
-README
-share/bucharest-map.xml
-SIGNATURE
-t/Map-Tube-Bucharest/01-use.t
-t/Map-Tube-Bucharest/02-version.t
-t/Map-Tube-Bucharest/03-map.t
-t/Map-Tube-Bucharest/04-get_node_by_id.t
-t/Map-Tube-Bucharest/05-get_node_by_name.t
-t/Map-Tube-Bucharest/06-get_shortest_route.t
-t/Map-Tube-Bucharest/07-name.t
-t/Map-Tube-Bucharest/08-xml.t
-xt/Map-Tube-Bucharest/01-pod_coverage.t
-xt/Map-Tube-Bucharest/02-pod.t
